[package]
name = "hashmat_the_brave_warrior"
version = "0.1.0"
authors = ["Jakob Lövhall <jacko_356@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "shopacholic"
path = "src/shopaholic/shopaholic.rs"